--- a/src/app/modules/onboarding-v3/panel/suggested/suggested-panel.component.html
+++ b/src/app/modules/onboarding-v3/panel/suggested/suggested-panel.component.html
@@ -1,3 +1,5 @@
+<m-loadingSpinner [inProgress]="inProgress$ | async"></m-loadingSpinner>
+
 <div class="m-onboardingV3__suggestionsPanelContainer">
   <m-onboardingV3__suggestionsPanelCard
     *ngFor="let suggestion of suggestions$ | async"
