--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -103,6 +103,7 @@
         !(service.shouldShowPaywall$ | async)
       "
       [style.height]="videoHeight"
+      [isModal]="isModal"
       [style.overflow]="videoHeight ? 'hidden' : null"
     ></m-videoPlayer--scrollaware>
 
