Optimizations and fixes to hovercard positioning

--- a/src/app/modules/onboarding-v3/panel/suggested/suggested-panel-card/suggested-panel-card.component.html
+++ b/src/app/modules/onboarding-v3/panel/suggested/suggested-panel-card/suggested-panel-card.component.html
@@ -10,6 +10,7 @@
     <div
       *ngIf="hovering$ | async"
       class="m-suggestedPanelCard__hoverCardContainer"
+      [ngStyle]="cardTopStyle"
     >
       <!-- Hover card -->
       <div class="m-hoverCard__topbar">
