Adding margin to empty feed notice for new channels. #4242

--- a/src/app/modules/channels/v2/feed/feed.component.ng.scss
+++ b/src/app/modules/channels/v2/feed/feed.component.ng.scss
@@ -65,6 +65,7 @@
         font-weight: 600;
         text-align: center;
         line-height: 28px; // translation may force multiline.
+        margin-bottom: 20px;
 
         @include m-theme() {
           color: themed($m-textColor--primary);
