--- a/src/app/modules/discovery/feeds/feed-item.component.scss
+++ b/src/app/modules/discovery/feeds/feed-item.component.scss
@@ -38,6 +38,7 @@
         margin: 0;
         padding: 0;
         font-weight: 600;
+        word-break: break-word;
         @include m-theme() {
           color: themed($m-textColor--primary);
         }
@@ -51,6 +52,7 @@
       p {
         padding: 0;
         margin: 0;
+        word-break: break-word;
         @include m-theme() {
           color: themed($m-textColor--secondary);
         }
