Remove YT migrator link for non-Canary users.

--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -151,6 +151,7 @@
             <a
               routerLink="/youtube-migration"
               i18n="@@COMMON_FOOTER__YOUTUBE_MIGRATION"
+              *ngIf="isCanary"
             >
               YouTube Migration
             </a>
