--- a/src/app/modules/newsfeed/activity/activity.component.scss
+++ b/src/app/modules/newsfeed/activity/activity.component.scss
@@ -39,6 +39,12 @@ m-activity {
   }
 }
 
+.m-activity--minimalRemind {
+  .m-activity__remindUsers {
+    display: none;
+  }
+}
+
 .m-activity__flag {
   padding: 4px 8px;
   border-radius: 26px;
