--- a/src/app/modules/newsfeed/feed-grid/feed-grid.component.html
+++ b/src/app/modules/newsfeed/feed-grid/feed-grid.component.html
@@ -2,7 +2,14 @@
   <m-newsfeed__entity
     [entity]="entity"
     *ngIf="entity$ | async as entity"
-    [displayOptions]="displayOptions"
+    [displayOptions]="{
+      minimalMode: true,
+      showComments: false,
+      autoplayVideo: false,
+      showToolbar: false,
+      bypassMediaModal: true,
+      showOwnerBlock: entity.subtype === 'remind'
+    }"
     (deleted)="delete($event)"
     [slot]="i"
   ></m-newsfeed__entity>
