Hide settings button when browsing other users pro channels #4105

--- a/src/app/modules/pro/channel/channel.component.html
+++ b/src/app/modules/pro/channel/channel.component.html
@@ -11,11 +11,7 @@
     <ng-container *ngIf="!(channelService.showSplash$ | async)">
       <div class="m-proChannel__loginRow">
         <ng-container
-          *ngIf="
-            !(channelService.isOwner$ | async) &&
-              !(channelService.userIsMember$ | async);
-            else settingsLinks
-          "
+          *ngIf="!(channelService.isOwner$ | async); else settingsLinks"
         >
           <div class="m-proChannel__login" *ngIf="!currentUser">
             <span i18n="@@M_PRO_CHANNEL__HAVE_ACCOUNT"
