Fixing a couple of minor issues and non-groups showing in groups

--- a/src/app/modules/onboarding-v3/panel/suggested/suggested-panel-card/suggested-panel-card.component.html
+++ b/src/app/modules/onboarding-v3/panel/suggested/suggested-panel-card/suggested-panel-card.component.html
@@ -74,7 +74,13 @@
             >#{{ hashtag }}
           </a>
         </div>
-        <span class="m-hoverCard__description">{{ description }}</span>
+        <a
+          [href]="url"
+          target="_blank"
+          class="m-suggestedPanelCard__link--undecorated"
+        >
+          <span class="m-hoverCard__description">{{ description }}</span>
+        </a>
       </div>
     </div>
   </div>
