WIP comments overhaul

--- a/src/app/modules/admin/reports/reports.html
+++ b/src/app/modules/admin/reports/reports.html
@@ -125,8 +125,9 @@
             >View parent and its comment thread</a
           >
         </div>
+        <!-- ojm test? might be retired -->
         <minds-card-comment
-          [object]="report.entityObj"
+          [comment]="report.entityObj"
           class="mdl-card"
         ></minds-card-comment>
       </div>
