--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -1,32 +1,36 @@
-.m-comments-composer .mdl-card__actions {
-  margin-top: 3px;
-}
-.mdl-card__actions {
-  a,
-  div {
-    @include m-theme() {
-      color: themed($m-blue-grey-700);
-    }
+// ojm delete this file?
 
-    &:hover {
-      @include m-theme() {
-        color: themed($m-blue-grey-900);
-      }
-    }
-  }
-  .m-comments-composer--overflow {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 100px;
-    height: 24px;
-    @include m-theme() {
-      background: linear-gradient(
-        to right,
-        rgba(themed($m-bgColor--primary), 0) 0%,
-        rgba(themed($m-bgColor--primary), 1) 25%
-      );
-    }
-  }
-}
+// .m-comments-composer .mdl-card__actions {
+//   margin-top: 3px;
+// }
+
+//ojm remove?
+// .mdl-card__actions {
+//   a,
+//   div {
+//     @include m-theme() {
+//       color: themed($m-blue-grey-700);
+//     }
+
+//     &:hover {
+//       @include m-theme() {
+//         color: themed($m-blue-grey-900);
+//       }
+//     }
+//   }
+// .m-comments-composer--overflow {
+//   position: absolute;
+//   top: 0;
+//   right: 0;
+//   bottom: 0;
+//   width: 100px;
+//   height: 24px;
+//   @include m-theme() {
+//     background: linear-gradient(
+//       to right,
+//       rgba(themed($m-bgColor--primary), 0) 0%,
+//       rgba(themed($m-bgColor--primary), 1) 25%
+//     );
+//   }
+// }
+// }
