--- a/src/app/modules/report/console/appeal.component.html
+++ b/src/app/modules/report/console/appeal.component.html
@@ -63,8 +63,8 @@
         View parent and its comment thread
       </a>
     </div>
-    <minds-card-comment [object]="appeal.report.entity" class="mdl-card">
-    </minds-card-comment>
+    <!-- ojm test -->
+    <m-comment [comment]="appeal.report.entity" class="mdl-card"></m-comment>
   </div>
 
   <div *ngIf="!appeal.report.entity" class="m-comment-wrapper">
