--- a/src/app/modules/comments/tree/tree.component.html
+++ b/src/app/modules/comments/tree/tree.component.html
@@ -15,6 +15,7 @@
 
 <ng-container *ngIf="showOnlyPoster">
   <m-comment__poster
+    #posterEl
     [guid]="guid"
     [parent]="entity"
     [entity]="entity"
