Quickfix for comment attachments overflowing bounds

--- a/src/app/modules/comments/poster/poster.component.html
+++ b/src/app/modules/comments/poster/poster.component.html
@@ -140,7 +140,7 @@
         ></div>
         <div
           *ngIf="attachment.getMime() == 'video'"
-          class="attachment-preview video-placeholder mdl-color--blue-grey-600"
+          class="attachment-preview video-placeholder"
         >
           <i class="material-icons">videocam</i>
         </div>
